tdf#91529 hopefully fixes the issue by painting immediately

Change-Id: I0c97e489150cd65d1ab1dbff4ee9f1699f89ac2e
(cherry picked from commit aca61aa5ffa4fab458d03e469b569c50952ed077)